# wsd-auto-drawer

./: README.md  gui.py  main.py  requirements.txt  setup.py  svg_to_wsd.py  web_ui.py  wsd_to_svg.py
.github/workflows/: build-cpp.yml  ci.yml
cpp/: CMakeLists.txt
cpp/src/: converter.cpp  converter.h  main.cpp  svg_parser.cpp  svg_parser.h  wsd_format.cpp  wsd_format.h  wsd_parser.cpp  wsd_parser.h  wsd_writer.cpp  wsd_writer.h
cpp/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: test_conversion.py
